watch page fixed spacing and fonts size

--- a/src/scss/pages/_coursedescription.scss
+++ b/src/scss/pages/_coursedescription.scss
@@ -1,6 +1,13 @@
 // Course Description Header Starts Here
+
+.course-description {
+  .nav {
+    padding: 0px 30px;
+  }
+}
+
 .coursedescription-header {
-  padding: 20px 50px;
+  padding: 30px 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -109,8 +116,6 @@
 .video-js .vjs-picture-in-picture-control {
   display: none;
 }
-// Course Description Header Ends Here
-
 // Course Description Starts Here
 .course-description {
   padding: 0px 50px 60px 50px;
@@ -120,12 +125,13 @@
     padding-right: 5px;
 
     &-content {
-      padding: 18px 30px 26px 30px;
       background: #ffffff;
+      padding: 18px 0px 26px 0px;
       border-radius: 0px 0px 8px 8px;
 
-      h5 {
+      h5.font-title--sm {
         color: #202029;
+        padding: 0px 30px;
         margin-bottom: 20px;
       }
 
@@ -160,8 +166,8 @@
       }
 
       &-tabitem {
-        margin-top: 20px;
-
+        margin-top: 30px;
+        padding: 0px 30px;
         .lesson-description {
           max-width: 800px;
 
